--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @gallery.name %></h1>
 
 <p> <%= @gallery.description %></p>
+
+<%= link_to "Delete this Gallery", "/galleries/#{@gallery.id}", method: :delete, data: { confirm: "Are you sure?" } %>
