--- a/app/views/galleries/edit.html.erb
+++ b/app/views/galleries/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Gallery</h1>
-<%= form_for(@gallery, url: { action: :update, method: :patch }) do |form| %>
+<%= form_for(@gallery) do |form| %>
   <div>
     <%= form.label :name %>
     <%= form.text_field :name %>
