Refactor views to use path helpers

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Pixtr Galleries</h1>
-<%= link_to "New Gallery", "/galleries/new" %>
+<%= link_to "New Gallery", new_gallery_path %>
 <ul>
 <% @galleries.each do |gallery| %>
-  <li><%= link_to gallery.name, "/galleries/#{gallery.id}" %></li>
+  <li><%= link_to gallery.name, gallery_path(gallery) %></li>
 <% end %>
 </ul>
