--- a/app/views/galleries/new.html.erb
+++ b/app/views/galleries/new.html.erb
@@ -1,12 +1,5 @@
 <h1>New Gallery</h1>
 <%= form_for(@gallery) do |form| %>
-  <div>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-  <div>
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+  <%= render form %>
   <%= form.submit "Create Gallery" %>
 <% end %>
