--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,16 +1,5 @@
 <h1>New Image</h1>
 <%= form_for([@gallery, @image]) do |form| %>
-  <div>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-  <div>
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-  <div>
-    <%= form.label :url %>
-    <%= form.text_field :url %>
-  </div>
+  <%= render form %>
   <%= form.submit "Create Image" %>
 <% end %>
