Add sign up page
* Created user model and migration
* Added sign up view
* Added users controller
* Added link to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= link_to "Sign Up", new_user_path %>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
