--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,10 @@
 <h1>New User</h1>
+
+<%= form_for @user do |form| %>
+  <%= render "errors", object: @user %>
+  <div>
+    <%= form.label :email %>
+    <%= form.text_field :email %>
+  </div>
+  <%= form.submit "Sign Up" %>
+<% end %>
