--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= link_to "Sign Up", new_user_path %>
-  <%= link_to "Sign In", new_session_path %>
+
+  <% if signed_in? %>
+    Welcome, <%= current_user.email %>
+  <% else %>
+    <%= link_to "Sign Up", new_user_path %>
+    <%= link_to "Sign In", new_session_path %>
+  <% end %>
 
   <%= yield %>
 
