Refactor redundant use of gallery_path(@gallery)

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -2,6 +2,6 @@
 <%= link_to "New Gallery", new_gallery_path %>
 <ul>
 <% @galleries.each do |gallery| %>
-  <li><%= link_to gallery.name, gallery_path(gallery) %></li>
+  <li><%= link_to gallery.name, gallery %></li>
 <% end %>
 </ul>
