--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -2,9 +2,9 @@
 <p><%= @image.description %></p>
 <div>
   <%= link_to "Edit Image", edit_gallery_image_path(@gallery, @image) %>
-  <%= link_to "Delete Image", gallery_image_path(@gallery, @image), method: "delete", data: { confirm: "Are you sure?" } %>
+  <%= link_to "Delete Image", [@gallery, @image], method: "delete", data: { confirm: "Are you sure?" } %>
 </div>
 <%= image_tag @image.url %>
 <div>
-  <%= link_to @gallery.name, gallery_path(@gallery.id) %>
+  <%= link_to @gallery.name, @gallery %>
 </div>
