--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,4 +1,3 @@
-<div>
+<%= link_to [image.gallery, image] do %>
   <%= image_tag image.url, width: "300px" %>
-  <%= link_to image.name, [image.gallery, image] %>
-</div>
+<% end %>
