A few minor view updates
* Add Home link in layouts/application.html.erb
* Remove welcome message when signed in; just show email
* Use <nav> tags instead of <div> tags where appropriate
* Move link to gallery above image in images/show.html.erb

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,10 +1,10 @@
 <h1><%= @image.name %></h1>
 <p><%= @image.description %></p>
-<div>
+
+<nav>
+  <%= link_to @gallery.name, @gallery %>
   <%= link_to "Edit Image", edit_gallery_image_path(@gallery, @image) %>
   <%= link_to "Delete Image", [@gallery, @image], method: "delete", data: { confirm: "Are you sure?" } %>
-</div>
+</nav>
+
 <%= image_tag @image.url %>
-<div>
-  <%= link_to @gallery.name, @gallery %>
-</div>
