--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -2,11 +2,11 @@
 
 <p> <%= @gallery.description %></p>
 
-<div>
+<nav>
   <%= link_to "Add Image", new_gallery_image_path(@gallery) %>
   <%= link_to "Edit Gallery", edit_gallery_path(@gallery) %>
   <%= link_to "Delete Gallery", @gallery, method: :delete, data: { confirm: "Are you sure?" } %>
-</div>
+</nav>
 <br>
 
 <%= render @images %>
