--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,17 @@
 </head>
 <body>
 
-  <% if signed_in? %>
-    Welcome, <%= current_user.email %>
-    (<%= link_to "Sign Out", session_path, method: "delete" %>)
-  <% else %>
-    <%= link_to "Sign Up", new_user_path %>
-    <%= link_to "Sign In", new_session_path %>
-  <% end %>
+  <div>
+    <%= link_to "Home", root_path %>
+
+    <% if signed_in? %>
+      <%= current_user.email %>
+      (<%= link_to "Sign Out", session_path, method: "delete" %>)
+    <% else %>
+      <%= link_to "Sign Up", new_user_path %>
+      <%= link_to "Sign In", new_session_path %>
+    <% end %>
+  </div>
 
   <%= yield %>
 
