--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -4,7 +4,7 @@
 <nav>
   <%= link_to @gallery.name, @gallery %>
   <%= link_to "Edit Image", edit_gallery_image_path(@gallery, @image) %>
-  <%= link_to "Delete Image", [@gallery, @image], method: "delete", data: { confirm: "Are you sure?" } %>
+  <%= link_to "Delete Image", [@gallery, @image], method: :delete, data: { confirm: "Are you sure?" } %>
 </nav>
 
 <%= image_tag @image.url %>
