--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <% if signed_in? %>
       <%= current_user.email %>
-      (<%= link_to "Sign Out", session_path, method: "delete" %>)
+      (<%= link_to "Sign Out", session_path, method: :delete %>)
     <% else %>
       <%= link_to "Sign Up", new_user_path %>
       <%= link_to "Sign In", new_session_path %>
