Use Monban for authentication
* Add Monban to Gemfile
* Add password_digest field to Users
* Include Monban helpers in ApplicationController
* Add password fields to login and sign up views
* Update UsersController and SessionsController to use Monban methods

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,11 @@
   <%= render "errors", object: @user %>
   <div>
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.email_field :email %>
+  </div>
+  <div>
+    <%= form.label :password %>
+    <%= form.password_field :password %>
   </div>
   <%= form.submit "Sign Up" %>
 <% end %>
