Add link to new gallery form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @user.email %>'s Galleries</h1>
 
+<%= link_to "New Gallery", new_gallery_path %>
+
 <ul>
   <% @user.galleries.each do |gallery| %>
     <li>
