--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <div class="comment">
   <h3><%= comment.user.email %></h3>
-  <p> <%= comment.content %></p>
+  <p>Posted <%= time_ago_in_words(comment.created_at) %> ago</p>
+  <p><%= comment.content %></p>
 </div>
