--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -12,3 +12,11 @@
 <h2>Comments</h2>
 
 <%= render @image.comments %>
+
+<h2>Post a Comment</h2>
+
+<%= form_for [@gallery, @image, @comment] do |form| %>
+  <%= form.label :content %>
+  <%= form.text_area :content %>
+  <%= form.submit "Add Comment" %>
+<% end %>
