Display a user's galleries as a <ul>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,8 @@
 
 <p><%= link_to "New Gallery", new_gallery_path %><p>
 
-<%= render @user.galleries %>
+<ul>
+  <% @user.galleries.each do |gallery| %>
+    <li><%= render gallery %></li>
+  <% end %>
+</ul>
