--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <% if signed_in? %>
       <%= link_to "All Galleries", galleries_path %>
       <%= link_to "My Galleries", current_user %>
+      <%= link_to "All Groups", groups_path %>
       <%= current_user.email %>
       (<%= link_to "Sign Out", session_path, method: :delete %>)
     <% else %>
