--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Groups</h1>
 
+<%= link_to "New Group", new_group_path %>
+
 <ul>
   <% @groups.each do |group| %>
     <li><%= group.name %></li>
