Users are members of groups
* Update groups#create to add current user as a member when creating a new group
* Display a user's group memberships on the user show page
* Refactor nav header for clarity

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,21 @@
-<h1><%= @user.email %>'s Galleries</h1>
+<h1><%= @user.email %></h1>
+
+<h2>Galleries</h2>
 
 <p><%= link_to "New Gallery", new_gallery_path %><p>
 
 <ul>
   <% @user.galleries.each do |gallery| %>
     <li><%= render gallery %></li>
+  <% end %>
+</ul>
+
+<h2>Groups</h2>
+
+<p><%= link_to "New Group", new_group_path %></p>
+
+<ul>
+  <% @user.groups.each do |group| %>
+    <li><%= group.name%></li>
   <% end %>
 </ul>
