--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @group.name %></h1>
 
-<%= link_to "Join this Group", group_memberships_path(group_id: @group.id), method: :post %>
+<% unless @group.users.include?(current_user) %>
+  <%= link_to "Join this Group", group_memberships_path(group_id: @group.id), method: :post %>
+<% end %>
