--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,15 @@
 <h1><%= @group.name %></h1>
 
+<p><%= @group.description %><p>
+
 <% unless @group.users.include?(current_user) %>
   <%= link_to "Join this Group", group_memberships_path(group_id: @group.id), method: :post %>
 <% end %>
+
+<h2>Group Members</h2>
+
+<ul>
+  <% @group.users.each do |user| %>
+    <li>user.email</li>
+  <% end %>
+</ul>
