Refactor joining a group
* Use member route for group_memberships
* Modify join link in groups show page for clarity
* Abstract method for joining a group in group_memberships controller
* Create method in users model to add user to a group

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,13 +3,13 @@
 <p><%= @group.description %><p>
 
 <% unless @group.users.include?(current_user) %>
-  <%= link_to "Join this Group", group_memberships_path(group_id: @group.id), method: :post %>
+  <%= link_to "Join this Group", join_group_path(@group), method: :post %>
 <% end %>
 
 <h2>Group Members</h2>
 
 <ul>
   <% @group.users.each do |user| %>
-    <li>user.email</li>
+    <li><%= user.email %></li>
   <% end %>
 </ul>
