Show flash messages in application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,12 @@
     <% end %>
   </div>
 
+  <div>
+    <% flash.each do |key, value| %>
+      <p class="<%= key %>"><%= value %></p>
+    <% end %>
+  </div>
+
   <%= yield %>
 
 </body>
