--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   <div>
 
     <% if signed_in? %>
+      <%= link_to "Home", root_path %>
       <%= link_to "All Galleries", galleries_path %>
       <%= link_to "All Groups", groups_path %>
-      <%= link_to "My Profile", current_user %>
       <%= current_user.email %>
       (<%= link_to "Sign Out", session_path, method: :delete %>)
     <% else %>
