Images can be added to groups
* Create migration for ImagesGroups relation
* Update image and group models with HABTM relationship
* Update images form partial to show groups checkboxes
* Update strong params in images controller
* Display images on groups show page

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,6 +6,10 @@
   <%= link_to "Join this Group", join_group_path(@group), method: :post %>
 <% end %>
 
+<h2>Images</h2>
+
+<%= render @group.images %>
+
 <h2>Group Members</h2>
 
 <ul>
