Users can leave groups
* Add link to leave a group to the groups show page
* Add route for leaving a group
* Implement group_memberships#destroy
* Add method in user model for leaving a group

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,7 +2,9 @@
 
 <p><%= @group.description %><p>
 
-<% unless @group.users.include?(current_user) %>
+<% if @group.users.include?(current_user) %>
+  <%= link_to "Leave this Group", leave_group_path(@group), method: :delete, data: { confirm: "Are you sure?" } %>
+<% else %>
   <%= link_to "Join this Group", join_group_path(@group), method: :post %>
 <% end %>
 
