Added tags to images using acts_as_taggable_on gem
* Add acts_as_taggable_on to Gemfile
* Generate migrations for acts_as_taggable_on
* Update image model to be taggable
* Display an image's tags on the image show view

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -20,6 +20,14 @@
   <% end %>
 </section>
 
+<section class="tags">
+  <h2>Tags</h2>
+
+  <% @image.tags.each do |tag| %>
+    <div><%= tag %></div>
+  <% end %>
+</section>
+
 <section class="comments">
   <h2>Comments</h2>
 
