Add ability to tag/untag images and view tags
* Add field to image form partial for tags
* Update strong params in images_controller for tags
* Link to tag show view from images show view
* Add route for tags#show
* Create tag show view to display all images with a given tag

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -16,3 +16,7 @@
     <%= form.collection_check_boxes(:group_ids, current_user.groups, :id, :name) %>
   <% end %>
 </div>
+<div>
+  <%= form.label :tag_list %>
+  <%= form.text_field :tag_list %>
+</div>
