Refactor tags to use top-level route

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -24,7 +24,7 @@
   <h2>Tags</h2>
 
   <% @image.tags.each do |tag| %>
-    <div><%= link_to tag.name, gallery_image_tag_path(@gallery, @image, tag.name) %></div>
+    <div><%= link_to tag, tag_path(tag) %></div>
   <% end %>
 </section>
 
