Add application helper for unordered lists
* Helper method renders partials in a ul for each item in a collection
* Refactor views to use this helper method

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -14,8 +14,4 @@
 
 <h2>Group Members</h2>
 
-<ul>
-  <% @group.users.each do |user| %>
-    <li><%= user.email %></li>
-  <% end %>
-</ul>
+<%= render_list @group.users %>
