--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -5,11 +5,7 @@
 
   <p><%= link_to "New Gallery", new_gallery_path %><p>
 
-  <ul>
-    <% @user.galleries.each do |gallery| %>
-      <li><%= render gallery %></li>
-    <% end %>
-  </ul>
+  <%= render_list @user.galleries %>
 </section>
 
 <section>
@@ -17,9 +13,5 @@
 
   <p><%= link_to "New Group", new_group_path %></p>
 
-  <ul>
-    <% @user.groups.each do |group| %>
-      <li><%= render group %></li>
-    <% end %>
-  </ul>
+  <%= render_list @user.groups %>
 </section>
