Additional view changes when not signed in
* Show links for add/edit/update only to signed-in users
* Show comment box only for signed-in users
* Show links to all galleries and groups to not-signed-in users
* Display information in user show view based on passed id param
* Link to user show view from group member list

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Pixtr Galleries</h1>
-<%= link_to "New Gallery", new_gallery_path %>
-<ul>
-<% @galleries.each do |gallery| %>
-  <li><%= link_to gallery.name, gallery %></li>
+
+<% if signed_in? %>
+  <%= link_to "New Gallery", new_gallery_path %>
 <% end %>
-</ul>
+
+<%= render_list @galleries %>
