--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= @group.description %><p>
 
-<% unless current_user.nil? %>
+<% if signed_in? %>
   <% if current_user.member?(@group) %>
     <%= link_to "Leave this Group", leave_group_path(@group), method: :delete, data: { confirm: "Are you sure?" } %>
   <% else %>
@@ -12,7 +12,7 @@
 
 <h2>Images</h2>
 
-<%= render @group.images %>
+<%= render(@group.images) || "This group has no images." %>
 
 <h2>Group Members</h2>
 
