--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -3,8 +3,10 @@
 
 <nav>
   <%= link_to @gallery.name, @gallery %>
-  <%= link_to "Edit Image", edit_gallery_image_path(@gallery, @image) %>
-  <%= link_to "Delete Image", [@gallery, @image], method: :delete, data: { confirm: "Are you sure?" } %>
+  <% if signed_in? %>
+    <%= link_to "Edit Image", edit_gallery_image_path(@gallery, @image) %>
+    <%= link_to "Delete Image", [@gallery, @image], method: :delete, data: { confirm: "Are you sure?" } %>
+  <% end %>
 </nav>
 
 <section class="image">
@@ -13,7 +15,7 @@
 
 <section class="likes">
   <%= pluralize(@image.likes.count, "Like") %>
-  <% unless current_user.nil? %>
+  <% if signed_in? %>
     <% if current_user.likes?(@image) %>
       <%= link_to "Unlike", [@gallery, @image, :like], method: :delete %>
     <% else %>
@@ -25,18 +27,20 @@
 <section class="tags">
   <h2>Tags</h2>
 
-  <%= render partial: "tags/tag", collection: @image.tags %>
+  <%= render(partial: "tags/tag", collection: @image.tags) || "This image has no tags." %>
 </section>
 
 <section class="comments">
   <h2>Comments</h2>
 
-  <%= render @image.comments %>
+  <%= render(@image.comments) || "This image has no comments." %>
 
-  <h2>Post a Comment</h2>
+  <% if signed_in? %>
+    <h2>Post a Comment</h2>
 
-  <%= form_for [@gallery, @image, @comment] do |form| %>
-    <%= form.text_area :content %>
-    <%= form.submit "Add Comment" %>
+    <%= form_for [@gallery, @image, @comment] do |form| %>
+      <%= form.text_area :content %>
+      <%= form.submit "Add Comment" %>
+    <% end %>
   <% end %>
 </section>
