--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,8 +2,4 @@
 
 <%= link_to "New Group", new_group_path %>
 
-<ul>
-  <% @groups.each do |group| %>
-    <li><%= render group %></li>
-  <% end %>
-</ul>
+<%= render_list(@groups) || "There are no groups." %>
