Make likes polymorphic
* Update likes table to include content_type and content_id
* Update models with polymorphic relationship
* Update routes for liking/unliking
* Create controller for image_likes
* Extract partial for displaying number of likes and like/unlike
* Update imges#show to use partial

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -14,14 +14,7 @@
 </section>
 
 <section class="likes">
-  <%= pluralize(@image.likes.count, "Like") %>
-  <% if signed_in? %>
-    <% if current_user.likes?(@image) %>
-      <%= link_to "Unlike", [@gallery, @image, :like], method: :delete %>
-    <% else %>
-      <%= link_to "Like", [@gallery, @image, :like], method: :post %>
-    <% end %>
-  <% end %>
+  <%= render "likes", object: @image, path: [@gallery, @image, :like] %>
 </section>
 
 <section class="tags">
