Make galleries likable
* Add like relationship to Gallery
* Add liked_galleries to User
* Show like count and button on galleries#show
* Add routes for gallery likes
* Create gallery_likes_controller
* Refactor like methods in User to accept any likable object

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -2,6 +2,10 @@
 
 <p> <%= @gallery.description %></p>
 
+<section class="likes">
+  <%= render "likes", object: @gallery, path: [@gallery, :like] %>
+</section>
+
 <% if signed_in? %>
   <nav>
     <%= link_to "Add Image", new_gallery_image_path(@gallery) %>
