--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Images tagged with "<%= @tag.name %>"</h1>
-<%= render @images %>
+
+<section class="container">
+  <%= render "thumbnail_table", images: @images %>
+</section>
