--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= @user.email %>'s Dashboard</h1>
+<div class="page-header">
+  <h1><%= @user.email %>'s Dashboard</h1>
+</div>
 
 <section>
   <h2>My Galleries</h2>
