--- a/app/views/galleries/edit.html.erb
+++ b/app/views/galleries/edit.html.erb
@@ -1,4 +1,9 @@
-<h1>Edit Gallery</h1>
+<div class="page-header">
+  <h1>
+    Edit Gallery
+  </h1>
+</div>
+
 <%= form_for(@gallery) do |form| %>
   <%= render form %>
   <%= form.submit "Update Gallery" %>
