--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New Image</h1>
+<div class="page-header">
+  <h1>
+    New Image
+  </h1>
+</div>
+
 <%= form_for([@gallery, @image]) do |form| %>
   <%= render form %>
   <%= form.submit "Create Image" %>
