--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Pixtr Galleries</h1>
+<div class="page-header">
+  <h1>
+    Pixtr Galleries
+  </h1>
+</div>
 
 <% if signed_in? %>
   <%= link_to "New Gallery", new_gallery_path %>
