--- a/app/views/galleries/new.html.erb
+++ b/app/views/galleries/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New Gallery</h1>
+<div class="page-header">
+  <h1>
+    New Gallery
+  </h1>
+</div>
+
 <%= form_for(@gallery) do |form| %>
   <%= render form %>
   <%= form.submit "Create Gallery" %>
