--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,4 +1,9 @@
-<h1>Edit Image</h1>
+<div class="page-header">
+  <h1>
+    Edit Image
+  </h1>
+</div>
+
 <%= form_for([@gallery, @image]) do |form| %>
   <%= render form %>
   <%= form.submit "Update Image" %>
