Style galleries, groups, and users lists

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -7,7 +7,7 @@
 
   <p><%= link_to "New Gallery", new_gallery_path %><p>
 
-  <%= render_list(@user.galleries) || "You have no galleries." %>
+  <%= render "list", collection: @user.galleries %>
 </section>
 
 <section>
@@ -15,5 +15,5 @@
 
   <p><%= link_to "New Group", new_group_path %></p>
 
-  <%= render_list(@user.groups) || "You have no groups." %>
+  <%= render "list", collection: @user.groups %>
 </section>
