Style galleries and groups lists for users#show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <p><%= link_to "New Gallery", new_gallery_path %><p>
 <% end %>
 
-<%= render_list(@user.galleries) || "This user has no galleries." %>
+<%= render "list", collection: @user.galleries %>
 
 <h2>Groups</h2>
 
@@ -18,4 +18,4 @@
   <p><%= link_to "New Group", new_group_path %></p>
 <% end %>
 
-<%= render_list(@user.groups) || "This user has no groups." %>
+<%= render "list", collection: @user.groups %>
