--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,18 +4,24 @@
   </h1>
 </div>
 
-<h2>Galleries</h2>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Galleries</h2>
 
-<% if signed_in? && current_user == @user %>
-  <p><%= link_to "New Gallery", new_gallery_path %><p>
-<% end %>
+    <% if signed_in? && current_user == @user %>
+      <p><%= link_to "New Gallery", new_gallery_path %><p>
+    <% end %>
 
-<%= render "list", collection: @user.galleries %>
+    <%= render "list", collection: @user.galleries %>
+  </div>
 
-<h2>Groups</h2>
+  <div class="col-md-6">
+    <h2>Groups</h2>
 
-<% if signed_in? && current_user == @user %>
-  <p><%= link_to "New Group", new_group_path %></p>
-<% end %>
+    <% if signed_in? && current_user == @user %>
+      <p><%= link_to "New Group", new_group_path %></p>
+    <% end %>
 
-<%= render "list", collection: @user.groups %>
+    <%= render "list", collection: @user.groups %>
+  </div>
+</div>
